src/apps/haikudepot/server/LocalRepositoryUpdateProcess.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright 2018, Andrew Lindesay <apl@lindesay.co.nz>.
+ * Copyright 2018-2020, Andrew Lindesay <apl@lindesay.co.nz>.
  * All rights reserved. Distributed under the terms of the MIT License.
  */
 
@@ -25,6 +25,8 @@
 
 #undef B_TRANSLATION_CONTEXT
 #define B_TRANSLATION_CONTEXT "LocalRepositoryUpdateProcess"
+
+#define DAYS_BETWEEN_REFRESH 5
 
 
 using namespace BPackageKit;
@@ -67,7 +69,7 @@ LocalRepositoryUpdateProcess::RunInternal()
 	BStringList repoNames;
 
 	if (Logger::IsInfoEnabled()) {
-		printf("[%s] will update local repositories\n", Name());
+		printf("[%s] will update local repositories' caches\n", Name());
 	}
 
 	status_t result = roster.GetRepositoryNames(repoNames);
@@ -91,12 +93,60 @@ LocalRepositoryUpdateProcess::RunInternal()
 	}
 
 	if (result == B_OK && Logger::IsInfoEnabled()) {
-		printf("[%s] did update %" B_PRIi32 " local repositories\n",
+		printf("[%s] did update %" B_PRIi32 " local repositories' caches\n",
 			Name(), repoNames.CountStrings());
 	}
 
 	return result;
 }
+
+
+bool
+LocalRepositoryUpdateProcess::_ShouldRunForRepositoryName(
+	const BString& repoName, BPackageKit::BPackageRoster& roster,
+	BPackageKit::BRepositoryCache* cache)
+{
+	if (fForce) {
+		if (Logger::IsInfoEnabled()) {
+			printf("[%s] am refreshing cache for repo [%s] as it was forced\n",
+				Name(), repoName.String());
+		}
+		return true;
+	}
+
+	if (roster.GetRepositoryCache(repoName, cache) != B_OK) {
+		if (Logger::IsInfoEnabled()) {
+			printf("[%s] am updating cache for repo [%s] as there was no"
+				" cache\n", Name(), repoName.String());
+		}
+		return true;
+	}
+
+	int32 daysSinceLastDone = fModel->GetLastDoneStore()
+		.DaysSinceLastDone(Name(), repoName);
+
+	if (Logger::IsDebugEnabled()) {
+		printf("[%s] repo [%s] cache was last updated %d days ago\n", Name(),
+			repoName.String(), daysSinceLastDone);
+	}
+
+	if (daysSinceLastDone > DAYS_BETWEEN_REFRESH) {
+		if (Logger::IsInfoEnabled()) {
+			printf("[%s] am updating cache for repo [%s] as has been %d days"
+				" since the last refresh\n", Name(), repoName.String(),
+				daysSinceLastDone);
+		}
+		return true;
+	}
+
+	if (Logger::IsDebugEnabled()) {
+		printf("[%s] skipped update local repo [%s] cache\n", Name(),
+			repoName.String());
+	}
+
+	return false;
+}
+
 
 status_t
 LocalRepositoryUpdateProcess::_RunForRepositoryName(const BString& repoName,
@@ -107,10 +157,15 @@ LocalRepositoryUpdateProcess::_RunForRepositoryName(const BString& repoName,
 	BRepositoryConfig repoConfig;
 	result = roster.GetRepositoryConfig(repoName, &repoConfig);
 	if (result == B_OK) {
-		if (roster.GetRepositoryCache(repoName, cache) != B_OK || fForce) {
+		if (_ShouldRunForRepositoryName(repoName, roster, cache)) {
 			try {
 				BRefreshRepositoryRequest refreshRequest(context, repoConfig);
 				result = refreshRequest.Process();
+				if (Logger::IsInfoEnabled()) {
+					printf("[%s] did update local repo [%s] cache\n", Name(),
+						repoName.String());
+				}
+				fModel->GetLastDoneStore().MarkLastDone(Name(), repoName);
 				result = B_OK;
 			} catch (BFatalErrorException& ex) {
 				_NotifyError(ex.Message(), ex.Details());
